--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,11 +16,11 @@
 		"svelte-check": "^3.0.1",
 		"tslib": "^2.4.1",
 		"typescript": "^4.9.3",
-		"vite": "^4.0.0"
+		"vite": "^4.0.0",
+		"@sveltejs/adapter-vercel": "^1.0.3"
 	},
 	"type": "module",
 	"dependencies": {
-		"@sveltejs/adapter-vercel": "^1.0.3",
 		"nota-ui": "^0.0.5"
 	}
 }
