--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,14 +10,14 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "^1.0.0",
+		"@sveltejs/adapter-auto": "1.0.0",
+		"@sveltejs/adapter-vercel": "^1.0.3",
 		"@sveltejs/kit": "^1.0.0",
 		"svelte": "^3.54.0",
 		"svelte-check": "^3.0.1",
 		"tslib": "^2.4.1",
 		"typescript": "^4.9.3",
-		"vite": "^4.0.0",
-		"@sveltejs/adapter-vercel": "^1.0.3"
+		"vite": "^4.0.0"
 	},
 	"type": "module",
 	"dependencies": {
